# poetry-pep621-compat

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/poetry_pep621_compat/: convert_utils.py  poetry_plugin.py  utils.py
